Fix Grid responsivness on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@ label {
 
 .guestContainer {
   display: grid;
-  max-width: 950px;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  max-width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
   margin: 10px;
   padding: 0;
